--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
@@ -33,12 +33,12 @@
 Shared agency is paradigmatically involved when two or more people paint a house together, tidy the toys away together, or lift a two-handled basket together.  
 To characterise shared agency, some philosophers have appealed to a special kind of intention or structure of intention, knowledge or commitment often called `shared intention'.  
 In this paper we argue that there are forms of shared agency characterising which requires appeal to  motor representation.  
-Shared agency is not only a matter of what we intend: sometimes it also depends on interlocking structures of motor representation.  This may have consequences for some metaphysical, normative and phenomenological questions about shared agency.
+Shared agency is not only a matter of what we intend: sometimes it  constitutively involves interlocking structures of motor representation.  This may have consequences for some metaphysical, normative and phenomenological questions about shared agency.
 
 \end{abstract}
 
 \section{***Discussion with Hong Yu}
-`Once we move beyond the single agent there's an a priori reason to suppose that you have a single kind of agentive structure' (Hong Yu).
+`Once we move beyond the single agent there's no a priori reason to suppose that you have a single kind of agentive structure' (Hong Yu).
 This is slightly tricky for me because I don't think there's a single kind of agentive structure in individual action either.
 
 Dissimilarity between this paper and the paper on intention and motor representation: whereas it was maybe plausible to conjecture that all intentions bottom out in motor representation, it is not similarly plausible to claim that shared intentions bottom out in social motor representations (there are surely cases of shared agency where the sharing is entirely a matter of intention and does not involve motor representations at all).
@@ -67,6 +67,9 @@ then
 	two or more agents' actions being appropriately related to a structure of social motor representation is also sufficient for shared agency.
 \end{quote}
 
+
+
+
 \section{Introduction}
 Shared agency is paradigmatically involved when two (or more) people 
 	paint a house together \citep{Bratman:1992mi}, 
@@ -74,50 +77,65 @@ Shared agency is paradigmatically involved when two (or more) people
 	prepare a hollandaise sauce together \citep{Searle:1990em}, 
 	go to Chicago together \citep{Kutz:2000si}, 
 	and walk together \citep{gilbert_walking_1990}.
-In developmental psychology paradigm cases of shared agency include  two people 
+In developmental psychology paradigm cases involving shared agency include  two people 
 	tidying up the toys together \citep{Behne:2005qh},
 	cooperatively pulling handles in sequence to make a dog-puppet sing \citep{Brownell:2006gu},
 	bouncing a ball on a large trampoline together \citep{Tomasello:2007gl}.
 
-A \emph{joint action} is an action or event involving shared agency.
+Which representations %and processes 
+are needed in giving a philosophical account of shared agency?
+Philosophers have so far considered intentions and other propositional attitudes but ignored the possibility that appeal to motor representation may also be needed. 
+%To considerations jointly motivate considering whether fully characterising shared agency may require appeal to motor representation.
+By contrast, concerning individual rather than shared agency, some have argued that motor representation may play a role in explaining agency \citep[e.g.][]{pacherie:2000_content,pacherie:2008_action,butterfill:2012_intention}. 
+Scientific research provides evidence that motor representations sometimes play a role in enabling agents to exercise shared agency, as we shall explain in detail below.
+So it is possible to ask whether appeal to motor representation  %might not only sometimes enable agents to exercise shared agency but also
+could also play a role in explaining what shared agency is.
+In this paper we argue that it could.
+Shared agency is not only a matter of what we intend or know, or of our commitments: in some cases it also constitutively involves certain structures of motor representation, or so we aim to show.
 
+%A \emph{joint action} is an action or event involving shared agency.
+
+Before starting on the argument, let us step back to ask why anyone might want a philosophical account of shared agency.
 Shared agency raises a tangle of scientific and philosophical questions.  Psychologically we want to know which mechanisms make it possible \citep{vesper_minimal_2010}.  
 Developmentally we want to know when shared agency emerges, what it presupposes and whether it might somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
 Phenomenologically we want to characterise what (if anything) is special about experiences of action and agency when shared agency is involved \citep{Pacherie:2010fk}.  
 Metaphysically we want to know what kinds of entities and structures are implied by the existence of shared agency \citep{Gilbert:1992rs,Searle:1994lb}.  
 And normatively we want to know what kinds of commitments (if any) are entailed by shared agency and how these commitments arise \citep{Roth:2004ki}.
 %, plus a formal account of how practical reasoning for joint action differs (if at all) from individual practical reasoning \citep{Sugden:2000mw,Gold:2007zd}
+One use for a philosophical account of shared agency is to support investigation of these questions by providing a principled way to distinguish shared from individual agency (as \citealp{Bratman:2009lv} suggests).  
+Or, if there is more than one form of shared agency, the account should provide a principled way of distinguishing among forms of individual and shared agency.   
+%
+%To make this aim vivid, consider some well-known contrast cases.
+%Contrast cases are pairs of episodes which are similar in terms of the behaviour and coordination they involve but where one episode exemplifies shared agency  while the other does not.  
+%Thus \citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
+%The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together involves shared agency whereas merely walking side by side does not. 
+%Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first  case involves shared agency, the second does not; but the same movements occur in both.%
+%\footnote{
+%Compare \citet{Pears:1971fk} who uses contrast cases to argue that whether something is an ordinary, individual action depends on its antecedents.
+%}  
+%
+%Contrast cases invite the question, 
+%How do actions involving shared agency differ from merely parallel actions involving  only individual agency? 
+%Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
+%And Searle’s example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
+%Minimally, a philosophical account of shared agency should identify a difference in these and other contrast cases.
+%
 
-To support investigation of these questions it may be useful to have an account of shared agency that gives us a principled way of distinguishing shared from individual agency \citep[compare][]{Bratman:2009lv}.  
+As already mentioned, our aim is to show that distinguishing individual from shared agency sometimes involves appeal to certain structures of motor representation.
+First we outline a standard approach to shared agency. 
 
-Where could we start in constructing or evaluating an account of shared agency?
-One possibility is to start with some well-known contrast cases.
-Contrast cases are pairs of events which are similar in terms of the behaviour and coordination they involve but where one exemplifies shared agency  while the other does not.  
-Thus \citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
-The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together involves shared agency whereas merely walking side by side does not. 
-Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first  case involves shared agency, the second does not; but the same movements occur in both.%
-\footnote{
-Compare Pears on individual action, using contrast cases to argue that whether something is an action depends on its antecedents ***
-}  
-These sorts of contrast case invite the question, 
-How does shared agency differ from individual but parallel agency? 
-Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
-And Searle’s example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
-So one constraint on any account of shared agency is that it should enable us to make systematic sense of these and other contrast cases.
 
 \section{Shared intention}
 On the leading, best developed accounts of shared agency in philosophy and psychology, 
 shared agency is explained  in terms of a special kind of intention or structure of intention, knowledge and commitment often called a shared intention.
-On this widely held view, the difference between our walking together and two strangers merely walking side-by-side is that one event is appropriately related to a shared intention whereas the other is not.
+For two or more agents to exercise shared agency is for them to have a shared intention and for this shared intention to be appropriately related to their actions.
+Such actions are called a `shared intentional activity' (\citealp[p.\ 142]{Bratman:1999fr}).%
+%On this widely held view, the difference between our walking together and two strangers merely walking side-by-side is that one event is appropriately related to a shared intention whereas the other is not.
 
-Of course, explaining shared agency in terms of shared intention pushes us back to the question, What is shared intention?
-The term `shared intention' is a term of art.
+Explaining shared agency in terms of shared intention pushes us back to the question, What is shared intention?
+The term `shared intention' is potentially misleading.
 On many accounts, shared intentions are neither shared nor intentions.
-Minimally, a shared intention stands to a joint action in roughly the way that an ordinary, individual intention stands to an ordinary, individual action.
-Now an ordinary, individual intention represents an outcome, coordinates an agent's actions, and coordinates the agent's actions in such a way that, normally, this coordination would facilitate the occurrence of the represented outcome.
-Similarly, a shared intention involves one or more representations of an outcome, coordinates the several agents' actions, and coordinates them in such a way that, normally, the coordination would facilitate the occurrence of the represented outcome.
-
-Beyond this parallel there is much divergence on what shared intention is.
+And there is much divergence on what shared intention is.
 Some hold that it differs from
 ordinary intention with respect to the attitude involved (\citealp{Searle:1990em}). 
 Others have explored the notion that it differs from ordinary intention with respect to its subject, which is plural \citep{Gilbert:1992rs,helm_plural_2008}, 
@@ -125,64 +143,46 @@ or that it differs from ordinary intention in the way it arises, namely through 
 or that it involves distinctive obligations or commitments to others (\citealp{Gilbert:1992rs}; \citealp{Roth:2004ki}).
 Opposing all such views, \citet{Bratman:1992mi,Bratman:2009lv} argues that shared intention can be realised by multiple ordinary individual intentions and other attitudes whose contents interlock in a distinctive way. 
 
-We can distinguish strong and weak claims linking shared agency to shared intention.
-The weak claim is that shared intention will enable us to understand \emph{some forms} of shared agency.
-This claim is neutral on whether there might be joint actions without shared intention, and on whether ingredients other than shared intention might be needed in giving a full account of shared agency.
-The strong claim is that an account of shared intention gives us the whole story about shared agency, so that no other ingredients are needed.  Given this claim, for an event to be a joint action is for it to be appropriately related to a shared intention.
+To avoid the need to take sides on what precisely shared intention is, 
+let us abstract from some details. 
+There are features of shared intention on which there should be widespread agreement.
+Minimally, a shared intention stands to the actions comprising a shared intentional activity in roughly the way that an ordinary, individual intention stands to an ordinary, individual action.
+Now an ordinary, individual intention represents an outcome, coordinates an agent's actions, and coordinates the agent's actions in such a way that, normally, this coordination would facilitate the occurrence of the represented outcome.
+Similarly, 
+on almost any account,
+a shared intention involves there being a single outcome which each agent represents, where these representations coordinate the several agents' actions and coordinate them in such a way that, normally, the coordination would facilitate the occurrence of the represented outcome.
 
-Some philosophers and psychologists have endorses the strong claim.  For instance:  
-%
-\begin{quote} 
-`I take a collective action to involve a collective intention.'  \citep[p.\ 5]{Gilbert:2006wr}
-
-\emph{
-***This quote is not clearly endorsing the strong claim (and we don't want to deny that all shared agency will involve shared intention (cf not arguing that there are individual actions which involve intention in paper-1).)
+Our view involves rejecting the claim that a full account of shared agency can be given in terms of shared intention alone.
+Instead, we shall argue, it is also necessary to appeal to certain structures of motor representation. 
+Note, however, that our view is compatible with various weaker claims linking shared intention to shared agency.
+In particular, our view is consistent with the claims that appeal shared intention is also needed in giving an account of shared agency, 
+and that \emph{some forms} of shared agency can be fully characterised by appeal to shared intention alone.
+Our view is also consistent with the claim that all exercises of shared agency involve shared intentions in some way.%
+\footnote{
+See \citet[p.\ 5]{Gilbert:2006wr}: `I take a collective action to involve a collective intention.'  
+Related claims are made by 
+	\citet[p.\ 381]{Carpenter:2009wq}, 
+	\citet[p.\ 369]{Call:2009fk}, 
+	\citet{Kutz:2000si},  
+	\citet[p.\ 117]{rakoczy_pretend_2006},  and
+	\citet{Tollefsen:2005vh}.
 }
-\end{quote}
-%
-Further examples could be given  (%
-	\citealp[p.\ 381]{Carpenter:2009wq}; 
-	\citealp[p.\ 369]{Call:2009fk};
-	\citealp{Kutz:2000si}; 
-	\citealp[p.\ 117]{rakoczy_pretend_2006}; 
-	\citealp{Tollefsen:2005vh}%
-	).
-In what follows we remain neutral on the weak claim but argue against the strong claim.
-We argue against the strong claim on the grounds that shared agency is sometimes not only a matter of shared intention but may also involves structures of interlocking motor representations.
-This may have consequences for some of the metaphysical, normative and phenomenological questions about shared agency mentioned above.
 
-
-\section{The parallel with ordinary intentions}
-Why might anyone endorse the strong claim that for an event to be a joint action is for it to be appropriately related to a shared intention? 
-Those who endorse it rarely or never provide arguments.
-However, two considerations might appear favour this view.
+Why might anyone hold, contrary to what we shall argue, that a full account of shared intention without appeal to ingredients other than shared intention? 
+Two considerations might initially appear favour this view.
 
 First, if someone thought that it is possible to distinguish systematically between the contrast cases by appeal to shared intention (and perhaps only by appeal to shared intention), this could motivate holding that for an event to be a joint action is for it to be appropriately related to a shared intention.
-We shall argue, however, that distinguishing systematically between the contrast cases cannot be done entirely in terms of shared intention.
-[*HY: this argument is missing from this draft.]
+We shall argue, however, that distinguishing systematically between the contrast cases cannot be done entirely in terms of shared intention. 
+[*CV: this argument is missing from this draft.]
 
-{\label{text:second_consideration} A second consideration} in favour of this view is a possible parallel between joint action and ordinary, individual action.
-If you think that events are actions in virtue of being appropriately related to intentions, 
-and if you think that shared intention stands to joint action as plain vanilla intention stands to ordinary, individual action,
-then it seems reasonable to suppose that for an event to be a joint action is for it to be appropriately related to a shared intention (\citealp{Pacherie:2012fk} offers this argument).
-
-Concerning this second consideration, 
-we take for granted that the parallel obtains but we do not accept the view about ordinary, individual action.
-Not everyone accepts that for an event to be an action is for it to be appropriately related to an intention.
-Some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
-For instance, Michael Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' \citet[p.\ 251]{bratman:2000_valuing}. 
-%\footnote{
-%For instance, \citet[p.\ 251]{bratman:2000_valuing} % = \citep[p.\ 51]{Bratman:2007bd}
-%describes an agent called `Creature 2' who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally'.
-%}
-Others reject the standard view without asserting there can be action without intention.
-Instead they claim that ingredients other than intention are needed to say which events are actions.
-In particular, some claim that motor representation and intention are both needed in explaining which events are ordinary, individual actions \citep{pacherie:2000_content,butterfill:2012_intention}.
-If any such view is correct, it is impossible to fully explain what it is for an event to be an action by appeal to intention alone.
-So depending on your views about ordinary, individual intention,
-the second consideration---the idea that the relation of shared intention to joint action is in some ways parallel to the relation between ordinary, individual intention and plain vanilla action---might actually support the view we aim to establish, namely that fully explaining shared agency requires appeal to structures of motor representation and not only to shared intention.
-%***what's the argument for this second claim!?
-
+{\label{text:second_consideration} A second, related consideration} which might appear to favour this view is a parallel between shared agency and ordinary, individual agency.
+If a full account of individual agency could be given by appeal to intention and other propositional attitudes with no appeal to motor representation,
+then it would seem unlikely that giving a full account of shared agency must somehow involve appeal to motor representation.
+However, as mentioned above, some have argued that fully characterising individual agency will require appeal to motor representation as well as intention \citep{pacherie:2000_content,butterfill:2012_intention}. 
+Given these arguments, the parallel between individual and shared agency motivates considering the possibility that  there is a constitutive role for motor representation in shared agency. 
+We also note that some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
+For instance, Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' (\citeyear[p.\ 251]{bratman:2000_valuing}; see \citealp[pp.\ 137--8]{Bratman:1987xw} for further justification). 
+Certainly, then, it is not unreasonable to question the claim that a full account of ordinary, individual agency can be given just in terms of intention. 
 
 
 \section{Motor representation}
@@ -194,7 +194,7 @@ A \textit{motor} representation is the sort of representation that enables us to
 %But if the transition occurs without any pause---if she does not have to wait before releasing the object from her right hand into her left in order to check that the object is securely in her left hand---this is a sign that her action involves predicting the position of her left hand.
 %***continue this example?
 We follow several psychologists and philosophers in supposing that motor representations feature in planning and monitoring action \citep[e.g.][]{wolpert:1995internal, miall:1996_forward}.
-%*HY asks why focus here on forward models
+[*HY asks why focus here on forward models]
 
 Motor representations are in some ways similar to intentions,
 as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
@@ -264,8 +264,8 @@ It is hardly controversial that reciprocal motor representations exist, for thei
 Should be clearer about transition:
 (a) I am observing and we reciprocally represent an outcome of your action (mirroring).
 (b) We are interacting and reciprocally represent an outcome of your action (mirroring in joint action).
-(c) We are interacting and reciprocally represent an outcome to which our actions are distributively directed.
-]
+(c) We are interacting and reciprocally represent an outcome to which our actions are distributively directed.%
+] 
 It is more controversial that reciprocal motor representation occurs in joint action, but there is some evidence for this claim too.%
 \footnote{
 See \citet{kourtis:2012_predictive}: `the partner’s expected action is simulated at the motor level, which probably facilitates effective performance of the joint action.'
@@ -292,7 +292,6 @@ As a first step, we shall ask how social motor representation might facilitate j
 Note that answering this question does not directly commit us to any view about shared agency.
 After all, social motor representation might be an enabling condition for some instances of shared agency but completely unnecessary for explaining what shared agency is.
 
-[*HY: I'm planning a short section on evidence for social motor representation.  But as I'm going beyond the evidence anyway, I don't plan to include it in presenting this paper to philosophers.]
 
 \section{How could social motor representation coordinate actions?}
 Suppose that social motor representation is sometimes present when two or more agents act together.
@@ -301,21 +300,44 @@ But let us consider just the possibility that it might.
 How could this happen?
 How could social motor representation play a role in coordinating action when two or more agents act together?
 
-To answer this question let us step back from motor representation to illustrate a general principle about planning.
-Suppose that Aravinda runs the trains and Gerhard runs the busses.
-Twice a year, on the equinoxes, Aravinda updates the train timetables and sends Gerhard the changes.
-For his part Gerhard also updates the bus timetables twice a year, on the solstices, and sends Aravinda the changes.
-Each wants their services to be optimally coordinated with the other's services in the sense of minimising passengers' journey times (perhaps only in order to maximise profits).
-So how successful Gerhard's plans are depends on Aravinda's plans, and conversely. 
-This is why each is responsive to the other's plans; indeed, each may even try to predict changes in the other's plans.  
+As a first step towards answering  this question let us illustrate a general principle about planning by scaling up from motor action all the way to corporate action.
+
+Suppose that Aravinda runs the trains and Gerhard  the busses.
+Let us stipulate that we measure the extent to which the two services, train and bus, are coordinated is to be measured by the sum of all passengers' total journey times.
+So new timetables would result in better coordination than the current timetables just if the new timetables would decrease the sum of passengers' total journey times.
+To illustrate, improving coordination might involve having trains arrive at a station shortly before, rather than shortly after, busses depart from there.
+Now Aravinda and Gerhard each intend they, Aravinda and Gerhard, coordinate the trains with the busses  to the greatest extent possible given other constraints; and they intend to do this by way of these intentions and meshing subplans of them, and this is common knowledge between them. 
+Aravinda and Gerhard thus meet Bratman's sufficient conditions for them to have a shared intention.
+Acting on this intention, 
+every January Aravinda updates the train timetables and sends Gerhard the changes.
+Likewise, Gerhard  updates the bus timetables every June and sends Aravinda the changes.
+In this way  each is responsive to the other's intentions and subplans of these. 
+Indeed, each may even try to predict changes in the other's subplans and modify their own accordingly.  
 But from each individual's point of view, the other's plans are  merely a constraint.
+
 This approach to planning suffers from two defects.
 First, it is unlikely to be optimal in the sense of resulting, eventually, in a combination of plans such that no other combination of plans would have been better for at least one service and no worse for either service.
 Second, it is unlikely to be efficient in the sense of allowing Gerhard and Aravinda to arrive at an optimal combination of plans for the two services, trains and buses, with the fewest iterations.
+
 How could they do better?
-One possibility may be to have a single plan covering busses and trains---perhaps for example Aravinda could buy Gerhard's franchise. 
+One possibility may be to have a single person planning the busses and trains---perhaps, for example, Aravinda could buy Gerhard's franchise. 
 But suppose that this is not possible, and that there are limits on how much information Aravinda and Gerhard can share. 
-Now there is a single goal to which Aravinda and Gerhard's activities are both directed.
+Then another way that might improve things would be to have Aravinda and Gerhard each plan everything.
+So Aravinda would plan the best timetable for all the trains and busses, and Gerhard would do the same.
+Since Aravinda only controls the trains, she can only implement the train-related part of this master timetable.
+Likewise, Gerhard can only implement the bus part of his master timetable.
+But if Aravinda's and Gerhard's separate planning processes are sufficiently similar, this process may result in coordinated services.
+In this new case, 
+Aravinda and Gerhard coordinate their actions 
+not by knowing or predicting each others' plans 
+but by thinking about the best overall plan.
+Instead of each viewing the others' plans and actions as constraint on their own,
+in planning actions they absorb the others' actions.
+
+The question was how social motor representation might play a role in coordinating action.
+We propose that it might do so in the way illustrated by Aravinda and Gerhard's final attempt at coordination,
+where each plans everything despite only being in a position to execute half of the plan.
+
 
 
 
@@ -337,8 +359,8 @@ Now there is a single goal to which Aravinda and Gerhard's activities are both d
 %The better 
 
 
-To answer this question
-let us take a step back and consider an individual action.
+To see how this might work,
+let us step down to motor action but first consider only  an individual action.
 Suppose an agent moves a mug from one place to another, passing it from her left hand to her right hand half way.
 It is a familiar idea that motor planning, like planning generally, involves starting with relatively abstract representations of outcomes and gradually filling in details.
 We can capture this by supposing that 
@@ -511,9 +533,9 @@ Of course this could be guaranteed by common knowledge.
 But common knowledge is not required.
 Alternatively it can be ensured by common planning processes and a common {background} of dispositions, habits and expectations.%
 \footnote{
-Another possible line of justification the claim that common knowledge is involved in shared intention might start from a generalisation of Davidson's claim that
+Another possible line of justification for the claim that common knowledge is involved in shared intention might start from a natural generalisation of Davidson's claim that
 `[a]ction does require %that what the agent does is intentional under some description, and this in turn requires 
-...\ that what the agent does is known to him under some description' \citep[p.\ 50]{Davidson:1971fz}.
+...\ that what the agent does is known to him under some description' \citep[p.\ 50]{Davidson:1971fz}. 
 %If we accepted this claim, then it seems we might have to conclude that not all joint actions are actions. 
 %While this may appear to be an obstacle to accepting our view, there is an independent reason for thinking that not all joint actions are actions.
 %For if we also follow Davidson in accepting that all actions are bodily movements (or Hornsby in accepting that all actions are tryings), it turns out that few paradigm cases of joint action are actions.
